# FYP2025

./: .gitignore  .replit  CREDENTIALS_REFERENCE.md  DEVELOPER_GUIDE.md  README.md  USER_GUIDE.md  package-lock.json  package.json  pyproject.toml  test_data.json
backend/: README.md  ai_utils.py  auth.py  database.py  hostel_management.db  main.py  models.py  p.py  requirements.txt  schemas.py  setup_database.py
backend/data/: hostel_rooms.json
backend/routes/: assets.py  community.py  complaints.py  mess.py  rooms.py  users.py
frontend/: README.md  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx  index.css  index.js  index.jsx
frontend/src/assets/icons/: IllustrationComponents.jsx
frontend/src/components/: AnimatedComponents.jsx  DashboardCard.jsx  Footer.jsx  LoadingSpinner.jsx  Navigation.jsx  PageTransition.jsx  ProtectedRoute.jsx  RoomAllocationForm.jsx  Sidebar.jsx  UpvoteButton.jsx
frontend/src/pages/: Assets.jsx  Community.jsx  Complaints.jsx  Login.jsx  MessFeedback.jsx  Profile.jsx  RoomAllocation.jsx
frontend/src/pages/dashboards/: ElectricianDashboard.jsx  HmcDashboard.jsx  MessVendorDashboard.jsx  PlumberDashboard.jsx  WardenLohitBoysDashboard.jsx  WardenLohitGirlsDashboard.jsx  (+2 more)
frontend/src/store/: assetsSlice.js  authSlice.js  communitySlice.js  complaintsSlice.js  index.js  messSlice.js  roomsSlice.js
frontend/src/temp_backup/: App.js  index.js
frontend/src/utils/: animations.js  api.js  constants.js  theme.js
(+10 files in other folders)
